# mol_embed_service

./: .gitignore  README.md  pixi.toml  pyproject.toml
mol_embed_service/: __init__.py  embedder.py  models.py
tests/: test_embedder.py
